# app/routes/auth.py
@@ -13,14 +13,14 @@ def get_db():
         db.close()
 
 class LoginRequest(BaseModel):
-    groupe_id: str
-    groupe_mdp: str
+    userlogin: str
+    mdp: str
 
 @router.post("/auth/login")
 def login(payload: LoginRequest = Body(...), db: Session = Depends(get_db)):
-    # Vérification du groupe et du mot de passe dans la BDD
-    groupe = db.query(models.Groupe).filter(models.Groupe.id == payload.groupe_id).first()
-    if groupe and hasattr(groupe, "mdp") and groupe.mdp == payload.groupe_mdp:
-        return {"token": "fake-token", "idUnite": groupe.idUnite}
+    # Vérification du userlogin et du mot de passe dans la BDD
+    groupe = db.query(models.Groupe).filter(models.Groupe.userlogin == payload.userlogin).first()
+    if groupe and groupe.mdp == payload.mdp:
+        return {"token": "fake-token", "id": groupe.id, "nom": groupe.nom, "userlogin": groupe.userlogin}
     else:
         raise HTTPException(status_code=401, detail="Identifiants invalides")
